added XMM, AN proceedings, Harvard Talk and recent youtube video

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -19,7 +19,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[]{k-cv} % Add 'print' as an option into the square
+\documentclass[9.5pt]{k-cv} % Add 'print' as an option into the square
                        % bracket to remove colors from this template
                        % for printing
 
@@ -31,64 +31,64 @@
 %-------------------------------------------------------------------------------
 %	SIDEBAR SECTION
 %-------------------------------------------------------------------------------
-
-\begin{aside} % In the aside, each new line forces a line break
-\section{date of birth}
-\color{gray}1992-09-11
-\section{contact}
-Carl-D\"ahne-Str. 10
-14469 Potsdam
-Germany
-~
-+49 (176) 531 351 97
-%+49 (331) 749 928 0
-~
-\href{mailto:eilin@aip.de}{eilin@aip.de}
-\href{https://github.com/ekaterinailin}{github/ekaterinailin}
-%\href{http://facebook.com/johnsmith}{fb://jsmith}
-\section{languages}
-Russian, German (bilingual)
-English C1
-French B2
-\section{skills}
-Python, Unix, LaTeX, Git(Hub)
-\end{aside}
+% In the aside, each new line forces a line break
+%\section{date of birth}
+%1992-09-11
+% \begin{aside} 
+% \color{gray}
+% \section{contact}
+% Carl-D\"ahne-Str. 10
+% 14469 Potsdam
+% Germany
+% ~
+% +49 (176) 531 351 97
+% %+49 (331) 749 928 0
+% ~
+% \href{mailto:eilin@aip.de}{eilin@aip.de}
+% \href{https://github.com/ekaterinailin}{github/ekaterinailin}
+% %\href{http://facebook.com/johnsmith}{fb://jsmith}
+% \section{languages}
+% Russian, German (bilingual)
+% English C2
+% French B2
+% \section{skills}
+% Python, Unix, LaTeX, Git(Hub)
+% \end{aside}
 
 %-------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 
+
 \section{education}
 
 \begin{entrylist}
 \entry
-{2018 \to \textbf{05/2022}}
-{PhD {\normalfont in Astrophysics}}
-{Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
+{2018 \to \textbf{07/2022}}
+{PhD {\normalfont in Astrophysics} @ Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
+{}
 {Supervisor: Prof. Dr. Katja Poppenh\"ager\\
-\emph{Stellar Flares in Star-Exoplanet Systems and Young Stars} \vspace{0.2cm}\\ I am interested in magnetic star-planet interactions, and their long-term effects on exoplanet habitability and stellar evolution.}
+\emph{Stellar flares in star-exoplanet systems and young stars}\vspace{.3cm}\\
+$\rightarrow$ I am interested in the magnetism of small stars, its origins, long-term evolution, and the space weather it creates for (exo)planets.\vspace{.3cm}}
 %------------------------------------------------
 %------------------------------------------------
 \entry
 {2016 \to 2018}
-{Master {\normalfont of Science in Astrophysics}}
-{University of Potsdam, Germany}
-{Supervisor: Prof. Dr. Klaus Strassmeier \\
- Mentor: Dr. Sarah J. Schmidt\\
-\emph{Flares in Clusters using K2 Data} \\ 
-\emph{1,0 "with distinction"}\vspace{0.2cm}\\
-This thesis quantified the relation between flaring activity on cool stars and their masses and ages for ZAMS to 600 Myr and K to mid-M dwarfs.}
+{Master {\normalfont of Science in Astrophysics} @ University of Potsdam, Germany}
+{}
+{Supervisor: Prof. Dr. Klaus Strassmeier, mentor: Dr. Sarah J. Schmidt\\
+\emph{Flares in clusters using K2 data}\\ \emph{1,0 "with distinction"}}%\\
+%This thesis quantified the relation between flaring activity on cool stars and their masses and ages for ZAMS to 600 Myr and K to mid-M dwarfs.}
 %------------------------------------------------
 
 
 %------------------------------------------------
 \entry
 {2012 \to 2016}
-{Bachelor {\normalfont of Science in Physics}}
-{Karlsruhe Institute for Technology, Germany}
-{Specialization in Biophysics\\
-Supervisor: Prof. Dr. Ulrich Nienhaus\\
-\emph{Uptake of TAT-coated Gold Nanoclusters in Live HeLa-Cells}\\
+{Bachelor {\normalfont of Science in Physics} @ Karlsruhe Institute for Technology, Germany}
+{}
+{Specialization in biophysics, Supervisor: Prof. Dr. Ulrich Nienhaus\\
+\emph{Uptake of TAT-coated gold nanoclusters in live HeLa cells}\\
 \emph{1,4 "very good"}}
 %------------------------------------------------
 \end{entrylist}
@@ -101,46 +101,49 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 \section{refereed publications}
 %\reversemarginpar
 %\marginnote{\color{gray}{refereed}}
-\bibentry{Flares in Open Clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Davenport, James R. A.; Strassmeier, Klaus G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
+
+\bibentry{Localizing flares to understand stellar magnetic fields and space weather in exo-systems }{Ilin, E.; Poppenhäger, K.; Alvarado-G\'omez, J. D}{2021, Astronomische Nachrichten,  \texttt{\href{https://doi.org/10.1002/asna.20210111}{doi:10.1002/asna.20210111} \href{https://arxiv.org/abs/2112.09676}{arXiv:2112.09676}}}
+
+\bibentry{Giant white-light flares on fully convective stars occur at high latitudes}{Ilin, E.; Poppenhäger, K.; Schmidt, S. J.; J\"arvinen, S. P.; Newton, E. R.; Alvarado-G\'omez, J. D; Pineda, S. J.; Davenport, J. R. A.; Oshagh, M.; Ilyin, I.}{2021, Monthly Notices of the Royal Astronomical Society, 507/2, pp 1723–1745  \texttt{\href{https://doi.org/10.1093/mnras/stab2159}{doi:10.1093/mnras/stab2159} \href{https://arxiv.org/abs/2108.01917}{arXiv:2108.01917}}}
+
+
+\bibentry{AltaiPony -- Flare science in Kepler, K2 and TESS light curves}{Ilin, E.}{2021, Journal of Open Source Software, 6(62), 2845 \texttt{\href{https://doi.org/10.21105/joss.02845}{10.21105/joss.02845}}}
+
+\bibentry{Flares in Open Clusters with K2. II. Pleiades, Hyades, Praesepe, Ruprecht 147, and M67}{Ilin, E.; Schmidt, S. J.; Poppenhäger, K.; Davenport, J. R. A.; Kristiansen, M. H.; Omohundro, M.}{2021, Astronomy \& Astrophysics, 645, A42, 25 pp. \texttt{\href{https://doi.org/10.1051/0004-6361/202039198}{doi:10.1051/0004-6361/202039198} \href{https://arxiv.org/abs/2010.05576}{arXiv:2010.05576}}}
+
+\bibentry{Flares in Open Clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, E.; Schmidt, S. J.; Davenport, J. R. A.; Strassmeier, K. G.}{2019, Astronomy \& Astrophysics, 622, A133/16. \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
 } \href{https://arxiv.org/abs/1812.06725}{arXiv:1812.06725}}}
 
-\bibentry{Flares in Open Clusters with K2. II. Pleiades, Hyades, Praesepe, Ruprecht 147, and M67}{Ilin, Ekaterina; Schmidt, Sarah J.; Poppenhäger, Katja; Davenport, James R. A.; Kristiansen, Martti H.; Omohundro, Mark}{2020, Astronomy \& Astrophysics, forthcoming.\\\texttt{ \href{https://arxiv.org/abs/2010.05576}{arXiv:2010.05576}}}
-
-\section{telescope time}
+\section{teaching and supervision}
 
 \begin{entrylist}
+
+
+%------------------------------------------------
 \entry
-{2020 }
-{SALT HRS, 2.8 hours DDT}
+{2020 \to ongoing}
+{Mentoring graduate student @ University of Heidelberg}
 {}
-{PI: Katja Poppenh\"ager}
-
-
-\end{entrylist}
-\newpage
-
-\section{work and teaching}
-
-\begin{entrylist}
-
+{Mentoring Aaron Maas during his first peer-reviewed research project on TRAPPIST-1 flares}
+%, during his first peer-reviewed research project on TRAPPIST-1 flares with MUSCAT.
 %------------------------------------------------
 \entry
 {2020}
-{University of Potsdam}
-{Potsdam, Germany}
-{\emph{Teaching assistant} for undergraduates.}
+{Teaching assistant @ University of Potsdam }
+{}
+{Galaxies and Cosmology undergraduate course}
 %------------------------------------------------
-\entry
-{2018}
-{Leibniz Institute for Astrophysics (AIP)}
-{Potsdam, Germany}
-{\emph{Research Assistant}}
+% \entry
+% {2018}
+% {Research Assistant @ Leibniz Institute for Astrophysics (AIP) \vspace{-.6cm}}
+% {}
+% {}
 %------------------------------------------------
 \entry
 {2016 \to 2018}
-{University of Potsdam}
-{Potsdam, Germany}
-{\emph{Teaching assistant} for undergraduates.}
+{Teaching assistant @ University of Potsdam }
+{}
+{Introduction to mathematical methods in physics}
 %------------------------------------------------
 %\entry
 %{2011 \to 2012}
@@ -149,34 +152,133 @@ Supervisor: Prof. Dr. Ulrich Nienhaus\\
 %{\emph{Author} of teaching aid in mathematics.}
 %%------------------------------------------------
 \end{entrylist}
+\newpage
+\section{telescope time}
+
+\begin{entrylist}
+
+\entry
+{2021}
+{XMM-Newton, 36ks priority A}
+{}
+{PI: \textbf{E. Ilin}, Co-Is: K. Poppenh\"ager, Co-Is: , B. Stelzer}
+
+\entry
+{2020 }
+{SALT HRS, 2.8 hours DDT}
+{}
+{PI: K. Poppenh\"ager, Co-Is: \textbf{E. Ilin}, S. J. Schmidt}
 
 
 
-\section{presentations}
+
+\end{entrylist}
+
+\section{awards, scholarships, funding}
 
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2020}
-{Conference talk}
-{Annual Meeting of the German Astronomical Society\vspace{-.1cm}\\\null\hfill
-virtual, Germany}
-{Flares, mass, age, AND rotation.\\Calibrating the flaring-age-mass relation in open clusters.}
+{2021 \to ongoing}
+{Fulbright Scholarship @ American Museum of Natural History}
+{ }
+{Awarded to doctoral students by the German-American Fulbright Commission. Includes a stipend, travel grant, and academic support throughout a  six month research stay in the USA.}
+
+\entry
+{2020 \to ongoing}
+{Doctoral Scholarship @ German Academic Scholarship Foundation}
+{}
+{Includes a stipend, travel grants, and academic support throughout the doctoral studies.}
+
+\entry
+{2019}
+{Graduation Award @ Physikalische Gesellschaft zu Berlin, Berlin, Germany}
+{}
+{Award for excellent master theses in physics earned at universities in Berlin and Potsdam.}
+
+
+\entry
+{2018}
+{Visiting Scientist @ NASA Ames Research Center, Mountain View, CA, USA}
+{}
+{Awarded funding for a research visit at the Kepler mission headquarters.}
+
+%\entry
+%{2018}
+%{Hackathon Challenge Winner}
+%{HackHPI, Hasso Plattner Institute, Potsdam, Germany}
+%{Data science challenge by \emph{Tableau}.}
+
+\entry
+{2014}
+{Erasmus+ Scholarship @ Universitet i Oslo, Norway}
+{}
+{Awarded funding for six months of undergraduate studies.
+Focus: space physics, computational physics}
+
+\entry
+{2012 \to 2018}
+{Full Scholarship @ German Academic Scholarship Foundation}
+{}
+{Includes a stipend, travel grants, and academic support throughout the undergraduate and graduate studies.}
+
+%------------------------------------------------
+\end{entrylist}
+
+
+
+
+
+
+
+
+\section{academic presentations and posters (selection)}
+
+\begin{entrylist}
+%------------------------------------------------
+\entry
+{2021}
+{Invited talk @ Harvard Smithsonian Center for Astrophysics Exoplanet Pizza Lunch}
+{}%{\\ virtual}
+{Magnetic worlds: What flares tell us about small stars and their planets}
+
+\entry
+{2021}
+{Contributed talk @ European Astronomical Society Meeting}
+{}%{\\ virtual}
+{The coolest stars may not hit their planets with their flaring all that much}
+%------------------------------------------------
+\entry
+{2021}
+{Contributed talk @ XMM-Newton Science Workshop}
+{}%{\\ virtual}
+{Giant white-light flares on fully convective stars occur at high latitudes}
+%------------------------------------------------
+%\entry
+%{2021}
+%{Virtual Poster @ CoolStars20.5}
+%{Cambridge Workshops of Cool Stars, Stellar Systems and the Sun \vspace{-.1cm}\\\null\hfill  CoolStars 20.5\vspace{-.1cm}\\\null\hfill
+%virtual, global}
+%{\href{https://zenodo.org/record/4558792}{Giant white-light flares on fully convective stars occur at high latitudes}}
 %------------------------------------------------
 \entry
 {2020}
-{Poster exhibition}
-{Royal Astronomical Society\vspace{-.1cm}\\\null\hfill
-Early Career Poster Exhibition\vspace{-.1cm}\\\null\hfill
-virtual, global}
-{Where do giant flares occur on small stars?}
+{Contributed talk @ Annual Meeting of the German Astronomical Society}
+{}%{\\ virtual}
+{Flares, mass, age, AND rotation. Calibrating the flaring-age-mass relation in open clusters}
+%------------------------------------------------
+%\entry
+%{2020}
+%{Poster exhibition}
+%{Royal Astronomical Society\vspace{-.1cm}\\\null\hfill
+%Early Career Poster Exhibition\vspace{-.1cm}\\\null\hfill
+%virtual, global}
+%{Where do giant flares occur on small stars?}
 %------------------------------------------------
 \entry
 {2019}
-{Conference talk}
-{16th Potsdam Thinkshop: \vspace{-.1cm}\\\null\hfill
-The rotation periods of cool stars:\vspace{-.1cm}\\\null\hfill Measurements, uses, connections and prospects \vspace{-.1cm}\\\null\hfill
-Potsdam, Germany}
+{Contributed talk @ \href{https://thinkshop.aip.de/16/cms/} {16th Potsdam Thinkshop}}
+{}%{\\AIP, Potsdam, Germany}
 {At a gallop: stellar flares from Kepler/K2 and TESS}
 %------------------------------------------------
 %\entry
@@ -187,26 +289,26 @@ Potsdam, Germany}
 %------------------------------------------------
 \entry
 {2019}
-{Conference talk}
-{Planet-Star Connections in the Era of TESS and Gaia\vspace{-.1cm}\\\null\hfill Santa Barbara, CA, USA}
+{Contributed talk @ \href{https://www.kitp.ucsb.edu/activities/exostar-c19}{Planet-Star Connections in the Era of TESS and Gaia}}
+{}%{\\Santa Barbara, CA, USA}
 {Stellar magnetic evolution: flaring activity in K2 open clusters}
 %------------------------------------------------
-%\entry
-%{2019}
-%{Seminar talk}
-%{Centre for Star and Planet Formation (STARPLAN)\vspace{-.1cm}\\\null\hfill Copenhagen, Denmark}
-%{Stellar magnetic evolution: superflares}
-%%------------------------------------------------
+\entry
+{2019}
+{Seminar talk @ Centre for Star and Planet Formation (STARPLAN)}
+{}%{\\ Copenhagen, Denmark}
+{Stellar magnetic evolution: superflares}
+% %%------------------------------------------------
 \entry
 {2018}
-{Conference poster}
-{CoolStars20\vspace{-.1cm}\\\null\hfill Boston, MA, USA}
+{Conference poster @ \href{http://coolstars20.cfa.harvard.edu/}{CoolStars20}}
+{}% {\\ Boston, MA, USA}
 {Exploring flaring activity as an age indicator using open cluster data}
 %------------------------------------------------
 \entry
 {2018}
-{Workshop talk}
-{Dwarf Stars and Clusters with K2\vspace{-.1cm}\\\null\hfill Boston, MA, USA}
+{Contributed talk @ \href{https://keplergo.github.io/KeplerScienceWebsite/workshop-on-dwarf-stars-and-clusters-with-k2-registration-now-open-space-is-limited.html}{Dwarf Stars and Clusters with K2}}
+{}% {\\Boston, MA, USA}
 {In search of the flaring-age relation.}
 %------------------------------------------------
 \end{entrylist}
@@ -219,79 +321,72 @@ Potsdam, Germany}
 %\clearpage
 %\smallheader{Ekaterina}{Ilin}
 
-\section{awards and scholarships}
-
-\begin{entrylist}
-%------------------------------------------------
-\entry
-{2020 \to ongoing}
-{Doctoral Scholarship}
-{German Academic Scholarship Foundation}
-{Includes a stipend, travel grants, and academic support throughout the doctoral studies.}
-
-\entry
-{2019}
-{Graduation Award}
-{Physikalische Gesellschaft zu Berlin, Berlin, Germany}
-{Award for excellent master theses in physics earned at universities in Berlin and Potsdam.}
-
-
-\entry
-{2018}
-{Visiting Scientist}
-{NASA Ames Research Center, Mountain View, CA, USA}
-{Awarded funding for a research visit at the Kepler mission headquarters.}
-
-%\entry
-%{2018}
-%{Hackathon Challenge Winner}
-%{HackHPI, Hasso Plattner Institute, Potsdam, Germany}
-%{Data science challenge by \emph{Tableau}.}
-
-\entry
-{2014}
-{Erasmus+ Scholarship}
-{Universitet i Oslo, Norway}
-{Awarded funding for six month of undergraduate studies.\\
-Focus: Space Physics, Computational Physics}
-
-\entry
-{2012 \to 2018}
-{Full Scholarship}
-{German Academic Scholarship Foundation}
-{Includes a stipend, travel grants, and academic support throughout the undergraduate and graduate studies.}
-
-%------------------------------------------------
-\end{entrylist}
-
-
+% \newpage
 
 
 
 %\clearpage
 %\smallheader{Ekaterina}{Ilin}
-
-%\section{volunteering}
-%\begin{entrylist}
+\newpage
+\section{outreach and civic involvement}
+\begin{entrylist}
 %\entry
 %{2017 \to ongoing}
 %{Python in astronomy}
 %{University of Potsdam\vspace{-.1cm}\\\null\hfill Leibniz Institute for Astrophysics Potsdam - AIP}
 %{Running a Python code review group with the master students in astrophysics on a biweekly basis in 2017/2018. Running the Python Club at AIP since 2019.\\}
 %%------------------------------------------------
-%\entry
-%{2016 \to ongoing}
-%{Effective Altruism}
-%{Effective Altruism Berlin, Potsdam\vspace{-.1cm}
-%\\\null\hfill Studienstiftung d. dt. Volkes
-%\vspace{-.1cm}\\\null\hfill Netzwerk f\"ur Effektiven Altruismus Deutschland e.V.}
-%{Organising interdisciplinary workshops for 20-120 participants, reading groups, and recreational activities; local group head in Potsdam. Currently member of the excutive board of the German Network for Effective Altruism (NEAD e.V.).\\}
+\entry
+{2021 \to ongoing}
+{Student representative @ Internal Scientific Committee at AIP}
+{}
+{Duties include: \textbf{representing (under)graduate and PhD students} affiliated with the AIP; running social events for the institute staff; on-boarding of new students to AIP}
+
+\entry
+{2021}
+{Public talks @ YouTube channel "Sterne, Weltall und das Leben"}
+{}
+{\texttt{\href{https://www.youtube.com/watch?v=LLHLobUifeY}{30-min YouTube video}} and \texttt{\href{https://www.youtube.com/watch?v=YRw_tIpspRw}{follow-up 12-min YouTube video}} about electromagnetic star-planet interactions on the \textbf{popular German astronomy channel} "Sterne, Weltall und das Leben", $>$ 37k views total.}
+
+\entry
+{2019}
+{Interview @ Women in Research Blog}
+{}
+{\texttt{\href{https://womeninresearchblog.wordpress.com/2019/06/26/ekaterina-germany/}{Blog post}} about my understanding of scientific research and opinions on how to support \textbf{women in STEM}.}
+
 %%------------------------------------------------
-%\entry
-%{2013 \to ongoing}
-%{Junior scientists network}
-%{Deutsches Jungforschernetzwerk - juFORUM e.V.}
-%{Organising interdisciplinary workshops and symposia for students and young researchers in STEM, presenting at science fairs, publishing articles in the club magazine; member of the executive board.}
+\entry
+{2019 \to 2021}
+{Community leader @ NEAD e. V.}
+{}
+{Co-founder and former chair of the board at the German Effective Altruism Network (NEAD e. V.). Coordinated the German-speaking \href{https://www.effectivealtruism.com/}{\textbf{Effective Altruism}} community: organization strategy, volunteer management and leadership. }
 %%------------------------------------------------
-%\end{entrylist}
+\entry
+{2013 \to 2019}
+{Community leader @ Deutsches Jungforschernetzwerk - juFORUM e.V.}
+{}
+{Organizing interdisciplinary workshops and symposia for students and \textbf{young researchers in STEM}, e.g., presenting at science fairs, publishing articles in the \href{https://www.juforum.de/}{association}'s magazine; member of the executive board.}
+%%------------------------------------------------
+\end{entrylist}
+
+\textcolor{red}{ \rule{19cm}{1pt} }
+ 
+\begin{entrylist}
+
+\entry
+{\Large{\textit{\textbf{languages}}}}
+{Russian, German (bilingual), English (C2), French (B2)}
+{}{}
+
+\entry
+{\Large{\textit{\textbf{skills}}}}
+{Python, Unix, LaTeX, Git(Hub)}
+{}{}
+
+\entry
+{\Large{\textit{\textbf{contact}}}}
+{Carl-D\"ahne-Str. 10, 14469 Potsdam, Germany,\\~+49 (176) 531 351 97, \href{mailto:eilin@aip.de}{eilin@aip.de}, \href{https://github.com/ekaterinailin}{github/ekaterinailin}}
+{}{}
+\end{entrylist}
+
 \end{document}
