Updates from Overleaf

--- a/CV_Ekaterina_Ilin.tex
+++ b/CV_Ekaterina_Ilin.tex
@@ -19,7 +19,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[9.5pt]{k-cv} % Add 'print' as an option into the square
+\documentclass[11pt]{k-cv} % Add 'print' as an option into the square
                        % bracket to remove colors from this template
                        % for printing
 
@@ -64,12 +64,12 @@
 
 \begin{entrylist}
 \entry
-{2018 \to \textbf{07/2022}}
+{2018 \to \textbf{09/2022}}
 {PhD {\normalfont in Astrophysics} @ Leibniz Institute for Astrophysics Potsdam (AIP), Germany}
 {}
 {Supervisor: Prof. Dr. Katja Poppenh\"ager\\
-\emph{Stellar flares in star-exoplanet systems and young stars}\vspace{.3cm}\\
-$\rightarrow$ I am interested in the magnetism of small stars, its origins, long-term evolution, and the space weather it creates for (exo)planets.\vspace{.3cm}}
+\emph{High lights: stellar flares as probes of magnetism in stars and star-planet systems}\vspace{.3cm}\\}
+% $\rightarrow$ I am interested in the magnetism of small stars, its origins, long-term evolution, and the space weather it creates for (exo)planets.\vspace{.3cm}}
 %------------------------------------------------
 %------------------------------------------------
 \entry
@@ -98,21 +98,34 @@ $\rightarrow$ I am interested in the magnetism of small stars, its origins, long
 %	PUBLICATIONS SECTION
 %-------------------------------------------------------------------------------
 
-\section{refereed publications}
+\section{First author refereed publications}
 %\reversemarginpar
 %\marginnote{\color{gray}{refereed}}
 
-\bibentry{Localizing flares to understand stellar magnetic fields and space weather in exo-systems }{Ilin, E.; Poppenhäger, K.; Alvarado-G\'omez, J. D}{2021, Astronomische Nachrichten,  \texttt{\href{https://doi.org/10.1002/asna.20210111}{doi:10.1002/asna.20210111} \href{https://arxiv.org/abs/2112.09676}{arXiv:2112.09676}}}
+\bibentry{Searching for flaring star-planet interactions in AU Mic TESS observations }{Ilin, E.; Poppenhäger, K.}{2022, Monthly Notices of the Royal Astronomical Society, 507/2, pp 1723–1745\\ \texttt{\href{https://academic.oup.com/mnras/article-abstract/513/3/4579/6587078?redirectedFrom=fulltext}{doi:10.1093/mnras/stac1232} \texttt{\href{https://arxiv.org/abs/2204.14090}{arXiv:2204.14090}}}}
 
-\bibentry{Giant white-light flares on fully convective stars occur at high latitudes}{Ilin, E.; Poppenhäger, K.; Schmidt, S. J.; J\"arvinen, S. P.; Newton, E. R.; Alvarado-G\'omez, J. D; Pineda, S. J.; Davenport, J. R. A.; Oshagh, M.; Ilyin, I.}{2021, Monthly Notices of the Royal Astronomical Society, 507/2, pp 1723–1745  \texttt{\href{https://doi.org/10.1093/mnras/stab2159}{doi:10.1093/mnras/stab2159} \href{https://arxiv.org/abs/2108.01917}{arXiv:2108.01917}}}
+\bibentry{Localizing flares to understand stellar magnetic fields and space weather in exo-systems }{Ilin, E.; Poppenhäger, K.; Alvarado-G\'omez, J. D}{2021, Astronomische Nachrichten, 1\\ \texttt{\href{https://doi.org/10.1002/asna.20210111}{doi:10.1002/asna.20210111} \href{https://arxiv.org/abs/2112.09676}{arXiv:2112.09676}}}
+
+\bibentry{Giant white-light flares on fully convective stars occur at high latitudes}{Ilin, E.; Poppenhäger, K.; Schmidt, S. J.; J\"arvinen, S. P.; Newton, E. R.; Alvarado-G\'omez, J. D; Pineda, S. J.; Davenport, J. R. A.; Oshagh, M.; Ilyin, I.}{2021, Monthly Notices of the Royal Astronomical Society, 507/2, pp 1723–1745 \\ \texttt{\href{https://doi.org/10.1093/mnras/stab2159}{doi:10.1093/mnras/stab2159} \href{https://arxiv.org/abs/2108.01917}{arXiv:2108.01917}}}
 
 
-\bibentry{AltaiPony -- Flare science in Kepler, K2 and TESS light curves}{Ilin, E.}{2021, Journal of Open Source Software, 6(62), 2845 \texttt{\href{https://doi.org/10.21105/joss.02845}{10.21105/joss.02845}}}
+\bibentry{AltaiPony -- Flare science in Kepler, K2 and TESS light curves}{Ilin, E.}{2021, Journal of Open Source Software, 6(62), 2845 \\\texttt{\href{https://doi.org/10.21105/joss.02845}{10.21105/joss.02845}}}
 
-\bibentry{Flares in Open Clusters with K2. II. Pleiades, Hyades, Praesepe, Ruprecht 147, and M67}{Ilin, E.; Schmidt, S. J.; Poppenhäger, K.; Davenport, J. R. A.; Kristiansen, M. H.; Omohundro, M.}{2021, Astronomy \& Astrophysics, 645, A42, 25 pp. \texttt{\href{https://doi.org/10.1051/0004-6361/202039198}{doi:10.1051/0004-6361/202039198} \href{https://arxiv.org/abs/2010.05576}{arXiv:2010.05576}}}
+\bibentry{Flares in Open Clusters with K2. II. Pleiades, Hyades, Praesepe, Ruprecht 147, and M67}{Ilin, E.; Schmidt, S. J.; Poppenhäger, K.; Davenport, J. R. A.; Kristiansen, M. H.; Omohundro, M.}{2021, Astronomy \& Astrophysics, 645, A42, 25 pp.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/202039198}{doi:10.1051/0004-6361/202039198} \href{https://arxiv.org/abs/2010.05576}{arXiv:2010.05576}}}
 
-\bibentry{Flares in Open Clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, E.; Schmidt, S. J.; Davenport, J. R. A.; Strassmeier, K. G.}{2019, Astronomy \& Astrophysics, 622, A133/16. \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
+\bibentry{Flares in Open Clusters with K2. I. M45 (Pleiades), M44 (Praesepe) and M67}{Ilin, E.; Schmidt, S. J.; Davenport, J. R. A.; Strassmeier, K. G.}{2019, Astronomy \& Astrophysics, 622, A133/16.\\ \texttt{\href{https://doi.org/10.1051/0004-6361/201834400}{doi:10.1051/0004-6361/201834400
 } \href{https://arxiv.org/abs/1812.06725}{arXiv:1812.06725}}}
+
+\newpage
+% \section{Contributing author refereed publications}
+
+% \bibentry{Lower than expected flare temperatures for TRAPPIST-1}{Maas A. J.; \textbf{Ilin E.}; Oshagh M.;  Pall\'e E.;  Parviainen H.; Molaverdikhani K.; Quirrenbach  A.;
+% Esparza-Borges E.;  Murgas F.; Bejar V. J. S.; Narita N.;  Fukui A.; Lin C.-L.; Mori M.; Klagyivik P.}{2022, The Astrophysical Journal, 928/2, 147. \\\texttt{submitted to MNRAS}}
+
+
+
+% \bibentry{Simulating the Space Weather in the AU Mic System: Stellar Winds and Extreme Coronal Mass Ejections}{Alvarado-G\'omez, J. D; Cohen O.; Drake J. J.; Fraschetti F.; Poppenh\"ager, K.; Garraffo C.; Chebly J.; \textbf{Ilin, E.}; Harbach L.; Kochukhov O. }{2022, The Astrophysical Journal, 928/2, 147.\\ \texttt{\href{https://iopscience.iop.org/article/10.3847/1538-4357/ac54b8}{doi:10.3847/1538-4357/ac54b8}} \texttt{\href{https://arxiv.org/abs/2202.07949}{ 	arXiv:2202.07949}}}
+
 
 \section{teaching and supervision}
 
@@ -152,40 +165,40 @@ $\rightarrow$ I am interested in the magnetism of small stars, its origins, long
 %{\emph{Author} of teaching aid in mathematics.}
 %%------------------------------------------------
 \end{entrylist}
-\newpage
-\section{telescope time}
+% \newpage
+% \section{telescope time}
 
-\begin{entrylist}
+% \begin{entrylist}
 
-\entry
-{2021}
-{XMM-Newton, 36ks priority A}
-{}
-{PI: \textbf{E. Ilin}, Co-Is: K. Poppenh\"ager, Co-Is: , B. Stelzer}
+% \entry
+% {2021}
+% {XMM-Newton, 36ks priority A}
+% {}
+% {PI: \textbf{E. Ilin}, Co-Is: K. Poppenh\"ager, Co-Is: , B. Stelzer}
 
-\entry
-{2020 }
-{SALT HRS, 2.8 hours DDT}
-{}
-{PI: K. Poppenh\"ager, Co-Is: \textbf{E. Ilin}, S. J. Schmidt}
-
-
+% \entry
+% {2020 }
+% {SALT HRS, 2.8 hours DDT}
+% {}
+% {PI: K. Poppenh\"ager, Co-Is: \textbf{E. Ilin}, S. J. Schmidt}
 
 
-\end{entrylist}
+
+
+% \end{entrylist}
 
 \section{awards, scholarships, funding}
 
 \begin{entrylist}
 %------------------------------------------------
 \entry
-{2021 \to ongoing}
+{2021 \to 2022}
 {Fulbright Scholarship @ American Museum of Natural History}
 { }
-{Awarded to doctoral students by the German-American Fulbright Commission. Includes a stipend, travel grant, and academic support throughout a  six month research stay in the USA.}
+{Awarded to doctoral students by the German-American Fulbright Commission. Includes a stipend, travel grant, and academic support for a six month research stay in the USA.}
 
 \entry
-{2020 \to ongoing}
+{2020 \to 2022}
 {Doctoral Scholarship @ German Academic Scholarship Foundation}
 {}
 {Includes a stipend, travel grants, and academic support throughout the doctoral studies.}
@@ -228,7 +241,7 @@ Focus: space physics, computational physics}
 
 
 
-
+% \newpage
 
 
 
@@ -237,10 +250,23 @@ Focus: space physics, computational physics}
 \begin{entrylist}
 %------------------------------------------------
 \entry
+{2022}
+{Seminar talk @ AMNH Astro Seminar}
+{}%{\\ virtual}
+{Flares in Kepler and TESS observations: 
+probing the magnetism of low-mass stars and star-planet systems}
+
+\entry
+{2022}
+{Contributed talk @ 50 Years of Skumanich Relations conference}
+{}%{\\ virtual}
+{Mapping flare locations with time series observations of stellar ensembles}
+
+\entry
 {2021}
 {Invited talk @ Harvard Smithsonian Center for Astrophysics Exoplanet Pizza Lunch}
 {}%{\\ virtual}
-{Magnetic worlds: What flares tell us about small stars and their planets}
+{Magnetic worlds: Flares as messengers from star-planet systems}
 
 \entry
 {2021}
@@ -248,11 +274,11 @@ Focus: space physics, computational physics}
 {}%{\\ virtual}
 {The coolest stars may not hit their planets with their flaring all that much}
 %------------------------------------------------
-\entry
-{2021}
-{Contributed talk @ XMM-Newton Science Workshop}
-{}%{\\ virtual}
-{Giant white-light flares on fully convective stars occur at high latitudes}
+% \entry
+% {2021}
+% {Contributed talk @ XMM-Newton Science Workshop}
+% {}%{\\ virtual}
+% {Giant white-light flares on fully convective stars occur at high latitudes}
 %------------------------------------------------
 %\entry
 %{2021}
@@ -261,11 +287,11 @@ Focus: space physics, computational physics}
 %virtual, global}
 %{\href{https://zenodo.org/record/4558792}{Giant white-light flares on fully convective stars occur at high latitudes}}
 %------------------------------------------------
-\entry
-{2020}
-{Contributed talk @ Annual Meeting of the German Astronomical Society}
-{}%{\\ virtual}
-{Flares, mass, age, AND rotation. Calibrating the flaring-age-mass relation in open clusters}
+% \entry
+% {2020}
+% {Contributed talk @ Annual Meeting of the German Astronomical Society}
+% {}%{\\ virtual}
+% {Flares, mass, age, AND rotation. Calibrating the flaring-age-mass relation in open clusters}
 %------------------------------------------------
 %\entry
 %{2020}
@@ -275,11 +301,11 @@ Focus: space physics, computational physics}
 %virtual, global}
 %{Where do giant flares occur on small stars?}
 %------------------------------------------------
-\entry
-{2019}
-{Contributed talk @ \href{https://thinkshop.aip.de/16/cms/} {16th Potsdam Thinkshop}}
-{}%{\\AIP, Potsdam, Germany}
-{At a gallop: stellar flares from Kepler/K2 and TESS}
+% \entry
+% {2019}
+% {Contributed talk @ \href{https://thinkshop.aip.de/16/cms/} {16th Potsdam Thinkshop}}
+% {}%{\\AIP, Potsdam, Germany}
+% {At a gallop: stellar flares from Kepler/K2 and TESS}
 %------------------------------------------------
 %\entry
 %{2019}
@@ -299,11 +325,11 @@ Focus: space physics, computational physics}
 {}%{\\ Copenhagen, Denmark}
 {Stellar magnetic evolution: superflares}
 % %%------------------------------------------------
-\entry
-{2018}
-{Conference poster @ \href{http://coolstars20.cfa.harvard.edu/}{CoolStars20}}
-{}% {\\ Boston, MA, USA}
-{Exploring flaring activity as an age indicator using open cluster data}
+%\entry
+%{2018}
+%{Conference poster @ \href{http://coolstars20.cfa.harvard.edu/}{CoolStars20}}
+%{}% {\\ Boston, MA, USA}
+%{Exploring flaring activity as an age indicator using open cluster data}
 %------------------------------------------------
 \entry
 {2018}
@@ -327,7 +353,7 @@ Focus: space physics, computational physics}
 
 %\clearpage
 %\smallheader{Ekaterina}{Ilin}
-\newpage
+
 \section{outreach and civic involvement}
 \begin{entrylist}
 %\entry
@@ -336,11 +362,14 @@ Focus: space physics, computational physics}
 %{University of Potsdam\vspace{-.1cm}\\\null\hfill Leibniz Institute for Astrophysics Potsdam - AIP}
 %{Running a Python code review group with the master students in astrophysics on a biweekly basis in 2017/2018. Running the Python Club at AIP since 2019.\\}
 %%------------------------------------------------
+
+
 \entry
-{2021 \to ongoing}
+{2021 \to 2022}
 {Student representative @ Internal Scientific Committee at AIP}
 {}
 {Duties include: \textbf{representing (under)graduate and PhD students} affiliated with the AIP; running social events for the institute staff; on-boarding of new students to AIP}
+
 
 \entry
 {2021}
@@ -369,24 +398,24 @@ Focus: space physics, computational physics}
 %%------------------------------------------------
 \end{entrylist}
 
-\textcolor{red}{ \rule{19cm}{1pt} }
+\textcolor{red}{ \rule{18cm}{1pt} }
  
 \begin{entrylist}
 
 \entry
-{\Large{\textit{\textbf{languages}}}}
+{\large{\textit{\textbf{languages}}}}
 {Russian, German (bilingual), English (C2), French (B2)}
-{}{}
+
 
 \entry
-{\Large{\textit{\textbf{skills}}}}
+{\large{\textit{\textbf{skills}}}}
 {Python, Unix, LaTeX, Git(Hub)}
-{}{}
+
 
 \entry
-{\Large{\textit{\textbf{contact}}}}
+{\large{\textit{\textbf{contact}}}}
 {Carl-D\"ahne-Str. 10, 14469 Potsdam, Germany,\\~+49 (176) 531 351 97, \href{mailto:eilin@aip.de}{eilin@aip.de}, \href{https://github.com/ekaterinailin}{github/ekaterinailin}}
-{}{}
+{}{}\vspace{-1cm}
 \end{entrylist}
 
 \end{document}
